--- a/app/src/main/res/layout/mobishop_staggered_product_card_third.xml
+++ b/app/src/main/res/layout/mobishop_staggered_product_card_third.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/mobishop_staggered_product_grid_card_width_portrait"
+    android:layout_width="@dimen/mobishop_staggered_product_grid_card_width_landscape"
     android:layout_height="match_parent"
     app:cardBackgroundColor="@android:color/transparent"
     app:cardElevation="0dp"
@@ -24,24 +24,55 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="horizontal"
+            android:baselineAligned="false">
 
-            <TextView
-                android:id="@+id/product_title"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_weight="0.65"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/mobishop_product_title"
-                android:textAlignment="center"
-                android:textAppearance="?attr/textAppearanceSubtitle2" />
+                android:orientation="vertical"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
 
-            <TextView
-                android:id="@+id/product_price"
-                android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/product_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/mobishop_product_title"
+                    android:textAlignment="center"
+                    android:textAppearance="?attr/textAppearanceSubtitle2" />
+
+                <TextView
+                    android:id="@+id/product_price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/mobishop_product_description"
+                    android:textAlignment="center"
+                    android:textAppearance="?attr/textAppearanceBody2" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_weight="0.35"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/mobishop_product_description"
-                android:textAlignment="center"
-                android:textAppearance="?attr/textAppearanceBody2" />
+                android:paddingTop="12dp"
+                android:paddingLeft="2dp"
+                android:orientation="vertical">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/gPay_button"
+                    android:backgroundTint="@color/textColorPrimary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/mobishop_button_pay" />
+
+            </LinearLayout>
+
         </LinearLayout>
+
+
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
